# vmw-cloudinit-metadata

./: .travis.yml  Dockerfile  README.md  README.rst  docker-entrypoint.sh  requirements.txt  setup.cfg  tox.ini
test_data/: test.yaml
vmw_cloudinit_metadata/cli/: app.py  main.py
vmw_cloudinit_metadata/cli/commands/: run.py
vmw_cloudinit_metadata/drivers/: driver.py  file.py
vmw_cloudinit_metadata/vspc/: server.py  vm_client.py
