[metadata]
name = vmw-cloudinit-metadata
author = Ryan Belgrave
author-email = rmb1993@gmail.com
summary = Library and Tool to run a Cloud-Init NoCloud compatible metadata server for VMWare VCenter
description-file = README.rst
home-page = https://github.com/rmb938/vmw-cloudinit-metadata/
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: System :: System Administration

[files]
packages =
    vmw_cloudinit_metadata

[entry_points]
console_scripts =
    vmw-cloudinit-metadata = vmw_cloudinit_metadata.cli.main:main

[pbr]
skip_authors = 1
skip_changelog = 1